@@ -3,3 +3,5 @@
 Database made using JavaJX , and SQLite.
 Currently, in order to add an elemtent to the database, you need to add using a database browser like DB browser for SQLite.
 Need to add SLF and SQLite jdbc libraries, and the JAVAFX SDK
+
+Edit configurations > Modify options > Add VM options > Add --module-path "C:\Users\xx\OneDrive\Desktop\SQLITE JARS\JavaFX\openjfx-21.0.1_windows-x64_bin-sdk\javafx-sdk-21.0.1\lib(Path to the lib folder basically" --add-modules javafx.controls,javafx.fxml
